--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,14 @@
-img {
-    width: 420px;
+* {
+    margin: 0;
+    padding: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-a {
-    display: block;
+body {
+    height: 1vh;
+    background-color: #e66465;
+}
+
+img {
+    width: 100%;
 }
